@@ -471,10 +471,27 @@ argument_list|(
 name|md
 argument_list|)
 expr_stmt|;
+comment|// put resolved infos in ant properties and ivy variables
+comment|// putting them in ivy variables is important to be able to change from one resolve call to the other
 name|getProject
 argument_list|()
 operator|.
 name|setProperty
+argument_list|(
+literal|"ivy.organisation"
+argument_list|,
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+operator|.
+name|getOrganisation
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ivy
+operator|.
+name|setVariable
 argument_list|(
 literal|"ivy.organisation"
 argument_list|,
@@ -503,10 +520,40 @@ name|getName
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|ivy
+operator|.
+name|setVariable
+argument_list|(
+literal|"ivy.module"
+argument_list|,
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|getProject
 argument_list|()
 operator|.
 name|setProperty
+argument_list|(
+literal|"ivy.revision"
+argument_list|,
+name|md
+operator|.
+name|getResolvedModuleRevisionId
+argument_list|()
+operator|.
+name|getRevision
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ivy
+operator|.
+name|setVariable
 argument_list|(
 literal|"ivy.revision"
 argument_list|,
@@ -548,6 +595,21 @@ argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|ivy
+operator|.
+name|setVariable
+argument_list|(
+literal|"ivy.resolved.configurations"
+argument_list|,
+name|mergeConfs
+argument_list|(
+name|md
+operator|.
+name|getConfigurationsNames
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 else|else
 block|{
@@ -555,6 +617,15 @@ name|getProject
 argument_list|()
 operator|.
 name|setProperty
+argument_list|(
+literal|"ivy.resolved.configurations"
+argument_list|,
+name|_conf
+argument_list|)
+expr_stmt|;
+name|ivy
+operator|.
+name|setVariable
 argument_list|(
 literal|"ivy.resolved.configurations"
 argument_list|,
