@@ -332,6 +332,72 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testDouble
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|_resolve
+operator|.
+name|setFile
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/java/fr/jayasoft/ivy/ant/ivy-simple.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|_resolve
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"resolve-simple"
+argument_list|,
+name|getIvy
+argument_list|()
+operator|.
+name|getVariable
+argument_list|(
+literal|"ivy.module"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|_resolve
+operator|.
+name|setFile
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/java/fr/jayasoft/ivy/ant/ivy-double.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|_resolve
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"resolve-double"
+argument_list|,
+name|getIvy
+argument_list|()
+operator|.
+name|getVariable
+argument_list|(
+literal|"ivy.module"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testFailure
 parameter_list|()
 throws|throws
