@@ -6,6 +6,8 @@
 - new type filtering in cachepath task
 - new cachefileset task: builds an ant fileset of artifacts in cache
 - publish task now uses srcivypattern for ivy files finding and for delivery
+- FIX: resolve now store resolved file id in ivy variables, so that multiple resolve calls
+  can be followed by multiple retrieve, each retrieve will use the last resolve info (IVY-49)
 - FIX: IllegalStateException on retrieve done from command line
 - FIX: checks ivy files data consistency with asked info (org, module name and revision)
 - FIX: use AUTH configuration for configuration file
